--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "name": "Yontobatsu",
   "version": "1.0",
 
-  "description": "Speed up annoying yet mendatory video",
+  "description": "Speed up annoying yet mandatory video",
 
   "icons": {
     "48": "./Yontobatsu.png"
